k3s/k3s-trusted/workloads/servarr/sonarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.home.balzers.xyz`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: default-headers
  tls:
    secretName: home-balzers-xyz-tls
